...
    <string name="app_name">Dietary</string>
    <string name="gallery_button">Gallery</string>
    <string name="rotate_button">Rotate</string>
    <string name="camera_supporting_text">Make sure all food is inside the circle</string>
    <string name="home_title">Home</string>
    <string name="report_title">Report</string>
    <string name="my_profile_title">My Profile</string>
    <string name="account_and_security_title">Account and Security</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="age_label">Age</string>
    <string name="weight_label">Weight</string>
    <string name="height_label">Height</string>
    <string name="gender_label">Gender</string>
    <string name="save">Save</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="food_scanner_title">Food Scanner</string>
    <string name="camera_permission_message">Food scanner isn\'t available because you denied camera access. You can enable it in settings.</string>
    <string name="yes">Yes</string>
    <string name="no_thanks">No, thanks</string>
    <string name="camera_access_dialog_message">Camera access is needed for the food scanner. Do you want to grant permission?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="email_address_placeholder">What\'s your email address?</string>
    <string name="email_address_label">Email Address</string>
    <string name="email_address_error_text">Please enter a valid email address</string>
    <string name="supporting_text_required">*required</string>
    <string name="password_placeholder">What\'s your password?</string>
    <string name="old_password_placeholder">What\'s your old password?</string>
    <string name="api_url_placeholder">Enter API URL</string>
    <string name="new_password_placeholder">Create your new password</string>
    <string name="password_error_text">Password must be at least 8 characters long and include a mix of lowercase, uppercase, numbers, special characters, and no spaces</string>
    <string name="password_label">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="you_ve_been_missed">You\'ve been missed 🤗</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_us_today">🌟 Join Us! 🌟</string>
    <string name="confirmation_password_placeholder">Re-enter your password</string>
    <string name="confirmation_password_error_text">Please confirm your password correctly</string>
...
    <string name="terms_of_use_label_button">By clicking get started or sign in, you agree to the</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="welcome_to">Welcome to</string>
    <string name="dietary">" Dietary!"</string>
    <string name="your_diet_s_best_ally">" Your diet\'s best friend 🌟"</string>
    <string name="landing_message">Check out your Food Diary:\nTrack your meals! 🥘🍱</string>
    <string name="get_started">Get Started</string>
    <string name="failed_to_took_picture">Failed to take picture</string>
    <string-array name="goal">
        <item>Weight Loss</item>
        <item>Maintain current weight</item>
        <item>Weight Gain</item>
    </string-array>
...
        <item>Daily activities require intense physical effort like construction work or heavy regular exercise.</item>
    </string-array>
    <string name="retry">Retry</string>
    <string name="searchbar_hint">Find your food diary!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="diary_display">Check out your Food Diary:\nTrack your meals! 🥘🍱</string>
    <string name="empty_content_label">No food diary entries yet</string>
    <string name="empty_content_search">The food you\'re looking for can\'t be found</string>
    <string name="cm">%1$s cm</string>
    <string name="year">%1$s years</string>
    <string name="kg">%1$s kg</string>
    <string name="title">Title</string>
    <string name="title_error_text">Title cannot be empty</string>
    <string name="title_placeholder">Enter food diary title</string>
    <string name="calories">Calories</string>
    <string name="kcal">%1$s kcal</string>
    <string name="fat">Fats</string>
    <string name="g">%1$s g</string>
...
    </string-array>
    <string name="appwidget_text">Dietary</string>
    <string name="api_url_label">API URL</string>
    <string name="api_url_error_text">URL must be in https format</string>
    <string name="serving_unit">✧ %1$s (100 g)</string>
    <string name="food_nutrition_label">Nutrition</string>
    <string name="continue_button">Continue</string>
    <string name="re_add">Re-add</string>
    <string name="wheel_max_label">%1$s/\nMax %2$s</string>
    <string name="waist_circumference_placeholder">Enter your waist circumference</string>
    <string name="waist_circumference_label">Waist Circumference</string>
    <string name="food_diary">Food Diary</string>
    <string name="progress">✦ Progress</string>
    <string name="your_nutrition_today">✦ Your Nutrition Today</string>
    <string name="dev_mode_notification">Dev Mode Notification</string>
    <string name="dev_mode_notif_title">Dev Mode</string>
    <string name="open_dev_mode_menu">Open dev mode menu</string>
    <string name="dev_mode_dismiss_message">Grant notification permissions through your Android settings</string>
    <string name="dev_mode_body">To access the dev mode menu, please grant notification access</string>
    <string name="allow">Allow</string>
    <string name="reset">Reset</string>
    <string name="weight_legend">Weight (kg)</string>
    <string name="waist_circumeference_legend">Waist Circumference (cm)</string>
    <string name="calorie_legend">Calories (kcal)</string>
    <string name="carbo_legend">Carbohydrates (g)</string>
    <string name="nutrition">✦ Nutrition</string>
...
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="privacy_policy">Effective Date: May 28, 2024\n\nWelcome to Dietary! Your privacy is important to us. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application (the "App"). Please read this policy carefully to understand our views and practices regarding your personal data and how we will treat it.\n\n1. Informat
    </string>
    <string name="and">" and"</string>
    <string name="privacy_policy_title">" Privacy Policy"</string>
    <string name="save_food_diary">save food diary</string>
    <string name="take_a_picture">take a picture</string>
    <string name="list_of_foods">list of foods</string>
    <string name="navigate_up" translatable="false">navigate up</string>
</resources>
